# voice-rag

./: .env.example  .gitignore  GRAFANA_AUTH_TROUBLESHOOTING.md  GRAFANA_GUIDE.md  GRAFANA_IMPLEMENTATION_SUMMARY.md  GRAFANA_INTEGRATION_GUIDE.md  GRAFANA_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_CHECKLIST.md  INDIAN_LANGUAGES_GUIDE.md  METRICS_GUIDE.md  MULTILINGUAL_GUIDE.md  MULTILINGUAL_IMPLEMENTATION.md  MULTILINGUAL_QUICKSTART.md  README.md  SECURITY_AUDIT.md  bot.py  check_grafana_config.py  example_metrics.py  grafana_metrics.py  ingest.py  language_switcher.py  metrics_logger.py  multilingual_config.py  pyproject.toml  rag.py
Odisha_Tourism/: About Konark.docx  Angul.docx  Balangir.docx  Balasore.docx  Bargarh.docx  Bhadrak.docx  Bhubaneswar.docx  Boudh.docx  Chilika.docx  Cuttack.docx  Cuttack1.docx  Deogarh.docx  Dhenkanal.docx  Gajapati.docx  Ganjam.docx  Jagtsinghpur.docx  Jajpur.docx  Jharsuguda.docx  Kalahandi.docx  Kandhamal.docx  Kendrapara.docx  Keonjhar.docx  Khordha.docx  Koraput.docx  Malkangiri.docx  Mayurbhanj.docx  Nabrangpur.docx  Nayagarh.docx  Nuapada.docx  Paradeep.docx  Puri.docx  Puri1.docx  Rayagada.docx  Sambalpur.docx  Subarnapur.docx  Sundergarh.docx
